--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <div id="up-container" style="width: 29%; background-color: #1b1e33; text-align: center;">
                   <h2>Alex</h2>
                   <p class="title">Developper and Founder</p>
-                  <p>Pushing the boundries of deep learning and always learning.</p>
+                  <p>Pushing the boundries of deep learning and constantly improving my knowledge.</p>
                   <p><button class="button-2">Contact</button></p>
                   <p><a href="javascript:void(0)" onclick="toggle_visibility('alex-up');">Close</a></p>
                 </div>
@@ -143,7 +143,7 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Rohan</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>I have a strong interest in programming and working on big projects.</p>
+                    <p>I have a strong interest in programming and working on big projects.	</p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
                   </div>
@@ -164,7 +164,7 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Anton</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>Helped in Web Dev of the website and I enjoy coding in python!</p>
+                    <p>Helped in Web Dev of the website and I enjoy coding in python!		</p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('anton-up');">Close</a></p>
                   </div>
