fixed pricing title colour

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <article id="pricing">
 <div class = "pricing">
-<h1> <font size= "14" color= "#F72514"> Pricing </font></h1>
+<h1> <font size= "14" color= "white"> Pricing </font></h1>
 <h3><p>$1.99 Monthly</p> </h3><hr>
 
 <ul>
