changed all the backgrounds and added seperating images

--- a/index.html
+++ b/index.html
@@ -38,22 +38,29 @@
 
 
   <article id="nutri">
-    <h1>What is NutriDaili?</h1>
-    <p>NutriDaili is a revolutionary app that let's you keep track of your diet while rewarding you for meeting your goals. When you are about to eat a meal, take a picture of it through the app and it will automatically count your calories for you.</p>
-    <p>We plan to team up with President's Choice to reward you with PC points for maintaining your diet and eating healthy, so you can save on those groceries the next time you need to shop.</p>
+    <h1 style="color:black font-size:14;">What is NutriDaili?</h1>
+    <ul>
+
+    	<font color="black">
+    	<li>NutriDaili is a revolutionary app that let's you keep track of your diet while rewarding you for meeting your goals. When you are about to eat a meal, take a picture of it through the app and it will automatically count your calories for you.</li><hr>
+    	<li>We plan to team up with President's Choice to reward you with PC points for maintaining your diet and eating healthy, so you can save on those groceries the next time you need to shop.</li>
+    	</font>
+    <br>
+    </ul>
+
     <img src="pc-plus-logo.png" alt="PC Plus Logo">
   </article>
 
- </div>
+<div id="p1">
+</div>
 
 <article id="pricing">
-<div class = "pricing">
-<h1> <font size= "14" color= "white"> Pricing </font></h1>
+<h1> <font size= "14" color= "black"> Pricing </font></h1>
 <h3><p>$1.99 Monthly</p> </h3><hr>
 
 <ul>
 
-	<font color="white">
+	<font color="black">
 	<li>Calorie Goal</li>
 	<li>Healthy meal recipies every month</li>
 	<li>1500 bonus PC points (Included once when signing up)</li>
@@ -64,7 +71,7 @@
 <h3><p>$8.99 Semi-Annually</p> </h3><hr>
 <ul>
 
-	<font color="white">
+	<font color="black">
 	<li>Food Analysis (i.e. Learn which foods rank highest in the nutrients you care about.)</li>
 	<li>Meal Level Carbs, Protein and Fat (i.e view macronutrients by gram or percentage.)</li>
 	<li>3500 bonus PC points (Included once when signing up)</li>
@@ -75,7 +82,7 @@
 <h3><p>$11.99 Annually</p> </h3><hr>
 <ul>
 
-	<font color="white">
+	<font color="black">
 	<li>Track your diet on the nutridaili app</li>
 	<li>Articles and tips by nutritionists</li>
 	<li>5500 bonus PC points (Included once when signing up)</li>
@@ -84,10 +91,14 @@
 
 </ul>
 
-</div>
 </article>
+
+<div id="p2">
+</div>
+
 <article id="about">
-        <h1 style="text-align:center; font-size:50;">The Team</h1>
+        <h1 style="text-align:center; font-size:50; color:black;">The Team</h1>
+        <p style="color:grey; text-align:center;"> Click image to display info </p>
 
     <div class="row">
       <div class="column">
@@ -101,9 +112,9 @@
                   <div id="up-container" style="width: 29%; background-color: #1b1e33; text-align: center;">
                   <h2>Alex</h2>
                   <p class="title">Developper and Founder</p>
-                  <p>Pushing the boundries of deep learning and constantly improving my knowledge.</p>
+                  <p>Pushing the boundries of deep learning and constantly improving my knowledge. Lead Developper.</p>
                   <p><button class="button-2">Contact</button></p>
-                  <p><a href="javascript:void(0)" onclick="toggle_visibility('alex-up');">Close</a></p>
+                  <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('alex-up');">Close</a></p>
                 </div>
               </div>
             </div>
@@ -122,9 +133,9 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Faizaan</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>I'm an avid mobile and web developer! I am always keen on learning something new!</p>
+                    <p>I'm an avid mobile and web developer! I am always keen on learning something new! Co-Developper.</p>
                     <p><button class="button-2">Contact</button></p>
-                    <p><a href="javascript:void(0)" onclick="toggle_visibility('faiz-up');">Close</a></p>
+                    <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('faiz-up');">Close</a></p>
                   </div>
                 </div>
               </div>
@@ -143,9 +154,9 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Rohan</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>I have a strong interest in programming and working on big projects.	</p>
+                    <p>I have a strong interest in programming and working on big projects.	Lead logo creater and desginer.</p>
                     <p><button class="button-2">Contact</button></p>
-                    <p><a href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
+                    <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
                   </div>
                 </div>
               </div>
@@ -164,9 +175,9 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Anton</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>Helped in Web Dev of the website and I enjoy coding in python!		</p>
+                    <p>Helped in Web Dev of the website and I enjoy coding in python!	Content Creator Co-Stylist for background.</p>
                     <p><button class="button-2">Contact</button></p>
-                    <p><a href="javascript:void(0)" onclick="toggle_visibility('anton-up');">Close</a></p>
+                    <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('anton-up');">Close</a></p>
                   </div>
                 </div>
               </div>
@@ -185,9 +196,9 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Waleed</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>I enjoy the pleasure of making things that are useful to other people through programming!</p>
+                    <p>I enjoy the pleasure of making things that are useful to other people through programming! Business agent.</p>
                     <p><button class="button-2">Contact</button></p>
-                    <p><a href="javascript:void(0)" onclick="toggle_visibility('waleed-up');">Close</a></p>
+                    <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('waleed-up');">Close</a></p>
                   </div>
                 </div>
               </div>
@@ -198,6 +209,10 @@
 
   </article>
 
+  <div id="p3">
+  </div>
+
+</div>
   <footer class="color" id="contact">
     <div id="contact-content">
         <div id="contact-info">
