added github and linkdin links and modified background

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="StyleSheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="utf-8" />
   <title style="text-align:center;"> NutriDaili </title style="text-align:center;">
   <meta name="Developers" content="FaizChishtie, Rohyr, wazaf0704, arese1999, amous123">
@@ -15,7 +16,7 @@
           else
               e.style.display = 'block';
       }
-      
+
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -37,6 +38,8 @@
      <a href="product.html"> <button class="button"> Try us! </button></a>
   </header>
 
+<div id="p4">
+</div>
 
   <article id="nutri">
     <h1 style="color:black font-size:14;">What is NutriDaili?</h1>
@@ -112,9 +115,15 @@
               <div id="up-wrapper">
                   <div id="up-container" style="width: 29%; background-color: #1b1e33; text-align: center;">
                   <h2>Alex</h2>
-                  <p class="title">Developper and Founder</p>
+                  <p class="title">CEO, Founder and developper</p>
                   <p>Pushing the boundries of deep learning and constantly improving my knowledge. Lead Developper.</p>
-                  <p><button class="button-2">Contact</button></p>
+                    <div style="margin: 24px 0;">
+                      <a class="lin" href="#"><i class="fa fa-github"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-twitter"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-linkedin"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-facebook"></i></a>
+                    </div>
+              <!--    <p><button class="button-2">Contact</button></p> -->
                   <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('alex-up');">Close</a></p>
                 </div>
               </div>
@@ -135,7 +144,13 @@
                     <h2>Faizaan</h2>
                     <p class="title">CEO and Founder</p>
                     <p>I'm an avid mobile and web developer! I am always keen on learning something new! Co-Developper.</p>
-                    <p><button class="button-2">Contact</button></p>
+                    <div style="margin: 24px 0;">
+                      <a class="lin" href="#"><i class="fa fa-github"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-twitter"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-linkedin"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-facebook"></i></a>
+                    </div>
+              <!--    <p><button class="button-2">Contact</button></p> -->
                     <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('faiz-up');">Close</a></p>
                   </div>
                 </div>
@@ -156,7 +171,13 @@
                     <h2>Rohan</h2>
                     <p class="title">CEO and Founder</p>
                     <p>I have a strong interest in programming and working on big projects.	Lead logo creater and desginer.</p>
-                    <p><button class="button-2">Contact</button></p>
+                    <div style="margin: 24px 0;">
+                      <a class="lin" href="#"><i class="fa fa-github"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-twitter"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-linkedin"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-facebook"></i></a>
+                    </div>
+              <!--    <p><button class="button-2">Contact</button></p> -->
                     <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
                   </div>
                 </div>
@@ -177,7 +198,13 @@
                     <h2>Anton</h2>
                     <p class="title">CEO and Founder</p>
                     <p>Helped in Web Dev of the website and I enjoy coding in python!	Content Creator Co-Stylist for background.</p>
-                    <p><button class="button-2">Contact</button></p>
+                    <div style="margin: 24px 0;">
+                      <a class="lin" href="#"><i class="fa fa-github"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-twitter"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-linkedin"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-facebook"></i></a>
+                    </div>
+              <!--    <p><button class="button-2">Contact</button></p> -->
                     <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('anton-up');">Close</a></p>
                   </div>
                 </div>
@@ -198,7 +225,13 @@
                     <h2>Waleed</h2>
                     <p class="title">CEO and Founder</p>
                     <p>I enjoy the pleasure of making things that are useful to other people through programming! Business agent.</p>
-                    <p><button class="button-2">Contact</button></p>
+                    <div style="margin: 24px 0;">
+                      <a class="lin" href="#"><i class="fa fa-github"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-twitter"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-linkedin"></i></a>
+                      <a class="lin"href="#"><i class="fa fa-facebook"></i></a>
+                    </div>
+              <!--    <p><button class="button-2">Contact</button></p> -->
                     <p><a style="color:#ff6680; text-decoration:none;" href="javascript:void(0)" onclick="toggle_visibility('waleed-up');">Close</a></p>
                   </div>
                 </div>
@@ -215,6 +248,12 @@
 
 </div>
   <footer class="color" id="contact">
+    <div style="margin: 14px 0;" text-align:center;>
+      <a class="lin" href="#"><i class="fa fa-github"></i></a>
+      <a class="lin"href="#"><i class="fa fa-twitter"></i></a>
+      <a class="lin"href="#"><i class="fa fa-linkedin"></i></a>
+      <a class="lin"href="#"><i class="fa fa-facebook"></i></a>
+    </div>
     <div id="contact-content">
         <div id="contact-info">
           <p id="contact-title">Contact Us:</p>
